--- a/assets/css/login/main.css
+++ b/assets/css/login/main.css
@@ -401,7 +401,8 @@ iframe {
   position: relative;
 }
 
-.alert-validate::before {
+
+alert-validate::before {
   content: attr(data-validate);
   position: absolute;
   max-width: 70%;
@@ -410,49 +411,33 @@ iframe {
   border-radius: 13px;
   padding: 4px 25px 4px 10px;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
   transform: translateY(-50%);
   right: 8px;
   pointer-events: none;
-
-  font-family: Poppins-Medium;
   color: #c80000;
   font-size: 13px;
-  line-height: 1.4;
-  text-align: left;
-
   visibility: hidden;
   opacity: 0;
-
-  -webkit-transition: opacity 0.4s;
-  -o-transition: opacity 0.4s;
-  -moz-transition: opacity 0.4s;
   transition: opacity 0.4s;
 }
 
 .alert-validate::after {
   content: "\f06a";
   font-family: FontAwesome;
-  display: block;
   position: absolute;
   color: #c80000;
   font-size: 15px;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
   transform: translateY(-50%);
   right: 13px;
 }
 
-.alert-validate:hover:before {
-  visibility: visible;
+.alert-validate:hover::before {
   opacity: 1;
+  visibility: visible;
 }
+
+
 
 @media (max-width: 992px) {
   .alert-validate::before {
