--- a/assets/css/login/main.css
+++ b/assets/css/login/main.css
@@ -403,7 +403,7 @@ iframe {
 
 
 alert-validate::before {
-  content: attr(data-validate);
+  /* content: attr(data-validate); */
   position: absolute;
   max-width: 70%;
   background-color: white;
