update login js

--- a/assets/css/login/main.css
+++ b/assets/css/login/main.css
@@ -397,7 +397,7 @@ iframe {
 /*------------------------------------------------------------------
 [ Alert validate ]*/
 
-..validate-input {
+.validate-input {
   position: relative;
 }
 
