change file css register

--- a/assets/css/register/css/register.css
+++ b/assets/css/register/css/register.css
@@ -77,9 +77,9 @@ h2 {
   font-family: Poppins;
   font-size: 36px; }
 
-.main {
+/* .main {
   background: #f8f8f8;
-  padding: 150px 0; }
+  padding: 150px 0; } */
 
 .clear {
   clear: both; }
